# api/cmd/main.go
@@ -2,22 +2,22 @@ package main
 
 import (
 	"fmt"
+	"log"
+	"net/http"
+	"strings"
+	"time"
+
 	"github.com/fedehsq/api/api"
-	"github.com/fedehsq/api/api/admin"
-	"github.com/fedehsq/api/api/log"
-	"github.com/fedehsq/api/api/user"
+	adminapi "github.com/fedehsq/api/api/admin"
+	logapi "github.com/fedehsq/api/api/log"
+	userapi "github.com/fedehsq/api/api/user"
 	"github.com/fedehsq/api/config"
 	"github.com/fedehsq/api/db"
 	_ "github.com/fedehsq/api/docs"
 	"github.com/gorilla/mux"
 	"github.com/rs/cors"
-	"github.com/swaggo/http-swagger"
-	"log"
-	"net/http"
-	"strings"
-	"time"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
-
 
 // @title           Swagger Vault support API
 // @version         1.0
@@ -56,14 +56,13 @@ func main() {
 	}
 
 	r := mux.NewRouter()
-	r.HandleFunc("/api/v1/log/get-all", logapi.GetAll).Methods("GET")
+	r.HandleFunc("/api/v1/logs", logapi.Get).Methods("GET")
 	r.HandleFunc("/api/v1/admin/signin", adminapi.Signin).Methods("POST")
-	r.HandleFunc("/api/v1/user/signup", userapi.Signup).Methods("POST")
-	r.HandleFunc("/api/v1/user/signin", userapi.Signin).Methods("POST")
-	r.HandleFunc("/api/v1/user/get-all", userapi.GetAll).Methods("GET")
-	r.HandleFunc("/api/v1/user/get", userapi.GetByUsername).Methods("GET")
-	r.HandleFunc("/api/v1/user/update", userapi.Update).Methods("PUT")
-	r.HandleFunc("/api/v1/user/delete", userapi.Delete).Methods("DELETE")
+	r.HandleFunc("/api/v1/users/signin", userapi.Signin).Methods("POST")
+	r.HandleFunc("/api/v1/users", userapi.Signup).Methods("POST")
+	r.HandleFunc("/api/v1/users", userapi.GetByUsername).Methods("GET")
+	r.HandleFunc("/api/v1/users", userapi.Update).Methods("PUT")
+	r.HandleFunc("/api/v1/users", userapi.Delete).Methods("DELETE")
 	r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 	handler := cors.AllowAll().Handler(r)
 	srv := &http.Server{
@@ -73,5 +72,7 @@ func main() {
 		ReadTimeout:  15 * time.Second,
 	}
 	fmt.Printf("Vault server started at %s\n", config.Conf.ApiAddress)
+	// Print swagger path
+	fmt.Printf("Swagger path: %s/swagger/index.html", config.Conf.ApiAddress)
 	log.Fatal(srv.ListenAndServe())
 }
