# api/docs/swagger.json
@@ -54,14 +54,23 @@
                 }
             }
         },
-        "/v1/log/get-logs": {
+        "/v1/logs": {
             "get": {
                 "security": [
                     {
                         "JWT": []
                     }
                 ],
-                "description": "get all logs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "The ip address of the caller;The identity of the caller; The HTTP method called; The route requested; The command inserted",
+                        "name": "q",
+                        "in": "query"
+                    }
+                ],
+                "description": "Returns the logs requested; if the parameters are empty returns all",
                 "produces": [
                     "application/json"
                 ],
@@ -88,7 +97,7 @@
                 }
             }
         },
-        "/v1/user/delete": {
+        "/v1/users": {
             "delete": {
                 "security": [
                     {
@@ -120,9 +129,7 @@
                         "description": "Unauthorized"
                     }
                 }
-            }
-        },
-        "/v1/user/get": {
+            },
             "get": {
                 "security": [
                     {
@@ -160,91 +167,7 @@
                         "description": "Not Found"
                     }
                 }
-            }
-        },
-        "/v1/user/get-all": {
-            "get": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "description": "Get all users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/userapi.UserResp"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    }
-                }
-            }
-        },
-        "/v1/user/signin": {
-            "post": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "description": "Signin an user passing username and password in json",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Signin an user",
-                "parameters": [
-                    {
-                        "description": "Signin user",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userapi.UserReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/userapi.UserResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
-        "/v1/user/signup": {
+            },
             "post": {
                 "security": [
                     {
@@ -287,9 +210,7 @@
                         "description": "Unauthorized"
                     }
                 }
-            }
-        },
-        "/v1/user/update": {
+            },
             "put": {
                 "security": [
                     {
@@ -311,6 +232,54 @@
                     {
                         "description": "Update user",
                         "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userapi.UserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/userapi.UserResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/v1/users/signin": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Signin an user passing username and password in json",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Signin an user",
+                "parameters": [
+                    {
+                        "description": "Signin user",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
